--- a/contato.html
+++ b/contato.html
@@ -122,7 +122,7 @@
             <div class="collapse navbar-collapse justify-content-between px-lg-3" id="navbarCollapse">
                 <div class="navbar-nav m-auto py-0">
                     <a href="/" class="nav-item nav-link">Home</a>
-                    <a href="sobre" class="nav-item nav-link">Sobre</a>
+                    <a href="sobre" class="nav-item nav-link active">Sobre</a><a href="fisio" class="nav-item nav-link active">Fisioterapia</a>
                    
                     <!--<div class="nav-item dropdown">
                         <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown">Artigos e notícias</a>
