--- a/sobre.html
+++ b/sobre.html
@@ -119,7 +119,7 @@
             <div class="collapse navbar-collapse justify-content-between px-lg-3" id="navbarCollapse">
                 <div class="navbar-nav m-auto py-0">
                     <a href="/" class="nav-item nav-link">Home</a>
-                    <a href="sobre" class="nav-item nav-link active">Sobre</a>
+                    <a href="sobre" class="nav-item nav-link active">Sobre</a><a href="fisio" class="nav-item nav-link active">Fisioterapia</a>
                      <div class="nav-item dropdown hoverdrop">
                         <span href="#" class="nav-link" data-toggle="dropdown">Serviços</span>
                         <div class="dropdown-menu rounded-0 m-0">
