--- a/contato.html
+++ b/contato.html
@@ -134,7 +134,7 @@
                         </div>
                     </div>-->
                     <div class="nav-item dropdown hoverdrop">
-                        <span href="#" class="nav-link" data-toggle="dropdown">Serviços</span>
+                        <span href="#" class="nav-link" data-toggle="dropdown">Massoterapia</span>
                         <div class="dropdown-menu rounded-0 m-0">
                             <a href="servicos#tu" class="dropdown-item">Massagem para dor (Clínica)</a><a href="servicos#dt" class="dropdown-item">Liberação Miofascial (Deep Tissue)</a><!-- <a href="servicos#qm" class="dropdown-item">Quick Massage</a> -->
                             <a href="servicos#sueca" class="dropdown-item">Massagem Sueca (Clássica)</a>
