--- a/fisio.html
+++ b/fisio.html
@@ -125,7 +125,7 @@
                     <a href="/" class="nav-item nav-link">Home</a>
                     <a href="sobre" class="nav-item nav-link active">Sobre</a><a href="fisio" class="nav-item nav-link active">Fisioterapia</a>
                      <div class="nav-item dropdown hoverdrop">
-                        <span href="#" class="nav-link" data-toggle="dropdown">Serviços</span>
+                        <span href="#" class="nav-link" data-toggle="dropdown">Massoterapia</span>
                         <div class="dropdown-menu rounded-0 m-0">
                             <a href="servicos#tu" class="dropdown-item">Massagem para dor (Clínica)</a><a href="servicos#dt" class="dropdown-item">Liberação Miofascial (Deep Tissue)</a><!-- <a href="servicos#qm" class="dropdown-item">Quick Massage</a> -->
                             <a href="servicos#sueca" class="dropdown-item">Massagem Sueca (Clássica)</a>
@@ -162,7 +162,7 @@
     <div class="container-fluid py-5">
         <div class="container">
             <div class="row align-items-center fisioblock">
-                <div class="col-lg-3 pb-5 pb-lg-0">
+                <div class="col-lg-3 p-0">
                      <h2 class="mb-4 text-center">Fisioterapia Traumato-ortopédica</h2>
                     <img class="img-fluid w-100" title="traumato" src="img/traumato.png" alt="traumato">
                 </div>
@@ -178,12 +178,12 @@
     <div class="container-fluid py-5">
         <div class="container">
             <div class="row align-items-center fisioblock">
-                <div class="col-lg-3 pb-5 pb-lg-0">
+                <div class="col-lg-3 p-0">
                      <h2 class="mb-4 text-center">Fisioterapia para idosos (geriátrica)</h2>
                     <img class="img-fluid w-100" title="idosos" src="img/idoso.png" alt="casal de idosos">
                 </div>
                 <div class="col-lg-9">
-                    <span class="pl-4 border-left border-primary d-block"><p>Mais Saúde e Qualidade de Vida para Idosos! <br>Com o passar dos anos, nosso corpo precisa de cuidados especiais. A fisioterapia geriátrica é essencial para manter a mobilidade, reduzir dores e promover a independência em cada fase da vida. <br><strong>Benefícios da Fisioterapia Geriátrica:</strong> <br> Melhora na força muscular e equilíbrio; prevenção de quedas e fraturas; alívio de dores articulares e musculares; promoção de autonomia nas atividades do dia a dia; Aumento da qualidade de vida, bem-estar e independência. Agende uma consulta para você ou seu querido garantir uma vida mais ativa e feliz na terceira idade! </p> Para agendamento ou dúvidas:<br> <a href="https://api.whatsapp.com/send?phone=5511974237159&text=Ol%C3%A1%20Will!%20Gostaria%20de%20mais%20informa%C3%A7%C3%B5es%20sobre%20a%20Fisioterapia%20para%20idosos." class="btn btn-primary mt-2" target="_blank">Mais informações</a> </span>
+                    <span class="pl-4 border-left border-primary d-block"><p>Mais Saúde e Qualidade de Vida para Idosos! <br>Com o passar dos anos, nosso corpo precisa de cuidados especiais. A fisioterapia geriátrica é essencial para manter a mobilidade, reduzir dores e promover a independência em cada fase da vida. <br><strong>Benefícios da Fisioterapia Geriátrica:</strong> <br> Melhora na força muscular e equilíbrio; prevenção de quedas e fraturas; alívio de dores articulares e musculares; promoção de autonomia nas atividades do dia a dia; Aumento da qualidade de vida, bem-estar e independência. Agende uma avaliação para você ou seu querido garantir uma vida mais ativa e feliz na terceira idade! </p> Para agendamento ou dúvidas:<br> <a href="https://api.whatsapp.com/send?phone=5511974237159&text=Ol%C3%A1%20Will!%20Gostaria%20de%20mais%20informa%C3%A7%C3%B5es%20sobre%20a%20Fisioterapia%20para%20idosos." class="btn btn-primary mt-2" target="_blank">Mais informações</a> </span>
                 </div>
             </div>
         </div>
@@ -191,7 +191,7 @@
     <div class="container-fluid py-5">
         <div class="container">
             <div class="row align-items-center fisioblock">
-                <div class="col-lg-3 pb-5 pb-lg-0">
+                <div class="col-lg-3 p-0">
                      <h2 class="mb-4 text-center">Fisioterapia Domiciliar</h2>
                     <img class="img-fluid w-100" title="domiciliar" src="img/domiciliar.png" alt="domiciliar">
                 </div>
@@ -209,7 +209,7 @@
     <div class="container-fluid py-5">
         <div class="container">
             <div class="row align-items-center fisioblock">
-                <div class="col-lg-3 pb-5 pb-lg-0">
+                <div class="col-lg-3 p-0">
                      <h2 class="mb-4 text-center">Fisioterapia para Dor de cabeça (Cefaleia tensional ou cervicogênica)</h2>
                     <img class="img-fluid w-100" title="cefaleia" src="img/cefaleia.png" alt="cefaleia">
                 </div>
@@ -226,7 +226,7 @@
     <div class="container-fluid py-5">
         <div class="container">
             <div class="row align-items-center fisioblock">
-                <div class="col-lg-3 pb-5 pb-lg-0">
+                <div class="col-lg-3 p-0">
                      <h2 class="mb-4 text-center">Fisioterapia para Disfunção temporomandibular</h2>
                     <img class="img-fluid w-100" title="dtm" src="img/dtm.png" alt="dtm">
                 </div>
@@ -234,7 +234,7 @@
                     <span class="pl-4 border-left border-primary d-block"><p>A disfunção temporomandibular (DTM) pode causar dores intensas na mandíbula, cabeça e até no pescoço. A fisioterapia é um tratamento eficaz para aliviar os sintomas, promovendo relaxamento muscular, reeducação postural e o retorno às atividades sem dor.<br>
                         <strong>Benefícios da Fisioterapia para DTM:</strong> <br> Redução da dor na mandíbula e nos músculos faciais; Alívio de dores de cabeça associadas; Melhora da mobilidade articular e da função mastigatória; Reeducação postural e prevenção de crises<br>
                         
-                        Não deixe que a DTM limite sua qualidade de vida! Entre em contato e agende uma avaliação para um tratamento personalizado.Entre no caminho para se livrar dos remédios e da sua Dor de cabeça. Agende sua consulta e comece seu tratamento para viver com mais leveza e sem dor.  </p> Para agendamento ou dúvidas:<br> <a href="https://api.whatsapp.com/send?phone=5511974237159&text=Ol%C3%A1%20Will!%20Gostaria%20de%20mais%20informa%C3%A7%C3%B5es%20sobre%20a%20Fisioterapia%20para%20DTM." class="btn btn-primary mt-2" target="_blank">Mais informações</a> </span>
+                        Não deixe que a DTM limite sua qualidade de vida, entre no caminho para se livrar dos remédios e da sua Dor de cabeça. Agende sua avaliação e comece seu tratamento para viver com mais leveza e sem dor.  </p> Para agendamento ou dúvidas:<br> <a href="https://api.whatsapp.com/send?phone=5511974237159&text=Ol%C3%A1%20Will!%20Gostaria%20de%20mais%20informa%C3%A7%C3%B5es%20sobre%20a%20Fisioterapia%20para%20DTM." class="btn btn-primary mt-2" target="_blank">Mais informações</a> </span>
                 </div>
             </div>
         </div>
@@ -242,7 +242,7 @@
      <div class="container-fluid py-5">
         <div class="container">
             <div class="row align-items-center fisioblock">
-                <div class="col-lg-3 pb-5 pb-lg-0">
+                <div class="col-lg-3 p-0">
                      <h2 class="mb-4 text-center">Fisioterapia Desportiva</h2>
                     <img class="img-fluid w-100" title="desportiva" src="img/desportiva.png" alt="desportiva">
                 </div>
