--- a/sobre.html
+++ b/sobre.html
@@ -121,7 +121,7 @@
                     <a href="/" class="nav-item nav-link">Home</a>
                     <a href="sobre" class="nav-item nav-link active">Sobre</a><a href="fisio" class="nav-item nav-link active">Fisioterapia</a>
                      <div class="nav-item dropdown hoverdrop">
-                        <span href="#" class="nav-link" data-toggle="dropdown">Serviços</span>
+                        <span href="#" class="nav-link" data-toggle="dropdown">Massoterapia</span>
                         <div class="dropdown-menu rounded-0 m-0">
                             <a href="servicos#tu" class="dropdown-item">Massagem para dor (Clínica)</a><a href="servicos#dt" class="dropdown-item">Liberação Miofascial (Deep Tissue)</a><!-- <a href="servicos#qm" class="dropdown-item">Quick Massage</a> -->
                             <a href="servicos#sueca" class="dropdown-item">Massagem Sueca (Clássica)</a>
