--- a/preco.html
+++ b/preco.html
@@ -184,7 +184,7 @@
         <div class="container py-5">
             <div class="row align-items-center">
                 <div class="col-lg-3 pb-3 pb-lg-0 text-center">
-                    <img class="img-fluid w-100" src="img/LOGO_Fisioterapia.jpg" alt="" style="width: auto !important;max-height: 200px;">
+                    <img class="img-fluid w-100" src="img/LOGO_Fisioterapia.jpg" alt="" style="width: auto !important;max-height: 200px;padding: 12px;">
                 </div>
                 <div class="col-lg-5">
                     <h4 class="mb-4">Fisioterapia</h4>
