--- a/tree.html
+++ b/tree.html
@@ -124,7 +124,7 @@ https://github.com/ardacarofficial/links-website is open source project.
       <section id="main_section_container_1" class="flex_column_center">
         <!-- Menu Text Item -->
         <div class="main_text_item" style="display: block;">
-          <p>Estamos preparados para lhe atender de acordo com suas preferências e necessidades, atendimentos domicilares ou em clínica, confira alguns de nosso serviços:<br></p>
+          <p>Estamos preparados para lhe atender de acordo com suas preferências e necessidades, atendimentos domicilares ou em clínica, confira alguns de nossos serviços:<br></p>
             <ul><li>Fisioterapia</li>
                 <li>Tratamento da dor</li>
                 <li>Massagem para dor (Clínica)</li>
