--- a/shell.html
+++ b/shell.html
@@ -118,8 +118,8 @@
             <div class="collapse navbar-collapse justify-content-between px-lg-3" id="navbarCollapse">
                 <div class="navbar-nav m-auto py-0">
                     <a href="/" class="nav-item nav-link">Home</a>
-                    <a href="sobre" class="nav-item nav-link active">Sobre</a><a href="fisio" class="nav-item nav-link active">Fisioterapia</a>
-                    <a href="servicos" class="nav-item nav-link">Serviços</a>
+                    <a href="sobre" class="nav-item nav-link active">Sobre</a><a href="fisioterapia" class="nav-item nav-link active">Fisioterapia</a>
+                    <a href="massoterapia" class="nav-item nav-link">Serviços</a>
                     <!--<div class="nav-item dropdown">
                         <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown">Artigos e notícias</a>
                         <div class="dropdown-menu rounded-0 m-0">
@@ -132,13 +132,13 @@
                     <div class="nav-item dropdown hoverdrop">
                         <span href="#" class="nav-link" data-toggle="dropdown">Massoterapia</span>
                         <div class="dropdown-menu rounded-0 m-0">
-                            <a href="servicos#tu" class="dropdown-item">Massagem para dor (Clínica)</a><a href="servicos#dt" class="dropdown-item">Liberação Miofascial (Deep Tissue)</a><!-- <a href="servicos#qm" class="dropdown-item">Quick Massage</a> -->
-                            <a href="servicos#relax" class="dropdown-item">Massagem Relaxante</a> <a href="servicos#cabeca" class="dropdown-item">Massagem para Dor de cabeça (Cefaleia - Enxaqueca)</a> <a href="servicos#dtm" class="dropdown-item">Massagem para Disfunção Temporomandibular</a>
-                            <a href="servicos#sueca" class="dropdown-item">Massagem Sueca (Clássica)</a>
-                            <a href="servicos#fl" class="dropdown-item">Massagem Facial (Lifting Facial)</a><a href="servicos#dl" class="dropdown-item">Drenagem Linfática</a>
-                            <a href="servicos#vent" class="dropdown-item">Ventosaterapia</a>
-                            <a href="servicos#pq" class="dropdown-item">Pedras Quentes</a>
-                            <a href="servicos#ROLF" class="dropdown-item">Liberação Miofascial (Conceito ROLF)</a><a href="servicos#auric" class="dropdown-item">Auriculoterapia</a>
+                            <a href="massoterapia#tu" class="dropdown-item">Massagem para dor (Clínica)</a><a href="massoterapia#dt" class="dropdown-item">Liberação Miofascial (Deep Tissue)</a><!-- <a href="massoterapia#qm" class="dropdown-item">Quick Massage</a> -->
+                            <a href="massoterapia#relax" class="dropdown-item">Massagem Relaxante</a> <a href="massoterapia#cabeca" class="dropdown-item">Massagem para Dor de cabeça (Cefaleia - Enxaqueca)</a> <a href="massoterapia#dtm" class="dropdown-item">Massagem para Disfunção Temporomandibular</a>
+                            <a href="massoterapia#sueca" class="dropdown-item">Massagem Sueca (Clássica)</a>
+                            <a href="massoterapia#fl" class="dropdown-item">Massagem Facial (Lifting Facial)</a><a href="massoterapia#dl" class="dropdown-item">Drenagem Linfática</a>
+                            <a href="massoterapia#vent" class="dropdown-item">Ventosaterapia</a>
+                            <a href="massoterapia#pq" class="dropdown-item">Pedras Quentes</a>
+                            <a href="massoterapia#ROLF" class="dropdown-item">Liberação Miofascial (Conceito ROLF)</a><a href="massoterapia#auric" class="dropdown-item">Auriculoterapia</a>
                         </div>
                     </div>
                     <a href="preco" class="nav-item nav-link">Preços</a>
@@ -187,7 +187,7 @@
                             <div class="d-flex flex-column justify-content-start">
                                 <a class="text-white-50 mb-2" href="/"><i class="fa fa-angle-right mr-2"></i>Home</a>
                                 <a class="text-white-50 mb-2" href="sobre"><i class="fa fa-angle-right mr-2"></i>Sobre</a>
-                                <a class="text-white-50 mb-2" href="servicos"><i class="fa fa-angle-right mr-2"></i>Serviços</a>
+                                <a class="text-white-50 mb-2" href="massoterapia"><i class="fa fa-angle-right mr-2"></i>Serviços</a>
                                 <a class="text-white-50 mb-2" href="preco"><i class="fa fa-angle-right mr-2"></i>Preços</a>
                                  <a class="text-white-50 mb-2" href="contato"><i class="fa fa-angle-right mr-2"></i>Contato</a> <a class="text-white-50" href="contato"><i class="fa fa-angle-right mr-2"></i>Endereços</a>
                             </div>
@@ -195,13 +195,13 @@
                         <div class="col-sm-6 mb-5">
                             <h5 class="text-white text-uppercase mb-4">Nossos serviços</h5>
                             <div class="d-flex flex-column justify-content-start">
-                                <a class="text-white-50 mb-2" href="servicos#tu"><i class="fa fa-angle-right mr-2"></i>Massagem para dor (Clínica)</a><a class="text-white-50 mb-2" href="servicos#dt"><i class="fa fa-angle-right mr-2"></i>Liberação Miofascial <br>(Deep Tissue)</a><!-- <a class="text-white-50 mb-2" href="servicos#qm"><i class="fa fa-angle-right mr-2"></i>Quick Massage</a> -->
-                                <a class="text-white-50 mb-2" href="servicos#sueca"><i class="fa fa-angle-right mr-2"></i>Massagem Sueca (Clássica)</a>
-                                <a class="text-white-50 mb-2" href="servicos#relax"><i class="fa fa-angle-right mr-2"></i>Massagem Relaxante</a> <a class="text-white-50 mb-2" href="servicos#cabeca"><i class="fa fa-angle-right mr-2"></i>Massagem para Dor de cabeça (Cefaleia - Enxaqueca)</a> <a class="text-white-50 mb-2" href="servicos#dtm"><i class="fa fa-angle-right mr-2"></i>Massagem para Disfunção Temporomandibular</a> <a class="text-white-50 mb-2" href="servicos#fl"><i class="fa fa-angle-right mr-2"></i>Massagem Facial (Lifting Facial)</a>
-                                <a class="text-white-50 mb-2" href="servicos#dl"><i class="fa fa-angle-right mr-2"></i>Drenagem Linfática</a>
-                                <a class="text-white-50 mb-2" href="servicos#pq"><i class="fa fa-angle-right mr-2"></i>Pedras Quentes</a>
-                                <a class="text-white-50 mb-2" href="servicos#vent"><i class="fa fa-angle-right mr-2"></i>Ventosaterapia</a>
-                                <a class="text-white-50 mb-2" href="servicos#ROLF"><i class="fa fa-angle-right mr-2"></i>Liberação Miofascial (Conceito ROLF)</a><a class="text-white-50 mb-2" href="servicos#auric"><i class="fa fa-angle-right mr-2"></i>Auriculoterapia</a>
+                                <a class="text-white-50 mb-2" href="massoterapia#tu"><i class="fa fa-angle-right mr-2"></i>Massagem para dor (Clínica)</a><a class="text-white-50 mb-2" href="massoterapia#dt"><i class="fa fa-angle-right mr-2"></i>Liberação Miofascial <br>(Deep Tissue)</a><!-- <a class="text-white-50 mb-2" href="massoterapia#qm"><i class="fa fa-angle-right mr-2"></i>Quick Massage</a> -->
+                                <a class="text-white-50 mb-2" href="massoterapia#sueca"><i class="fa fa-angle-right mr-2"></i>Massagem Sueca (Clássica)</a>
+                                <a class="text-white-50 mb-2" href="massoterapia#relax"><i class="fa fa-angle-right mr-2"></i>Massagem Relaxante</a> <a class="text-white-50 mb-2" href="massoterapia#cabeca"><i class="fa fa-angle-right mr-2"></i>Massagem para Dor de cabeça (Cefaleia - Enxaqueca)</a> <a class="text-white-50 mb-2" href="massoterapia#dtm"><i class="fa fa-angle-right mr-2"></i>Massagem para Disfunção Temporomandibular</a> <a class="text-white-50 mb-2" href="massoterapia#fl"><i class="fa fa-angle-right mr-2"></i>Massagem Facial (Lifting Facial)</a>
+                                <a class="text-white-50 mb-2" href="massoterapia#dl"><i class="fa fa-angle-right mr-2"></i>Drenagem Linfática</a>
+                                <a class="text-white-50 mb-2" href="massoterapia#pq"><i class="fa fa-angle-right mr-2"></i>Pedras Quentes</a>
+                                <a class="text-white-50 mb-2" href="massoterapia#vent"><i class="fa fa-angle-right mr-2"></i>Ventosaterapia</a>
+                                <a class="text-white-50 mb-2" href="massoterapia#ROLF"><i class="fa fa-angle-right mr-2"></i>Liberação Miofascial (Conceito ROLF)</a><a class="text-white-50 mb-2" href="massoterapia#auric"><i class="fa fa-angle-right mr-2"></i>Auriculoterapia</a>
                             </div>
                         </div>
                         <!--<div class="col-sm-12 mb-5">
