--- a/shell.html
+++ b/shell.html
@@ -118,7 +118,7 @@
             <div class="collapse navbar-collapse justify-content-between px-lg-3" id="navbarCollapse">
                 <div class="navbar-nav m-auto py-0">
                     <a href="/" class="nav-item nav-link">Home</a>
-                    <a href="sobre" class="nav-item nav-link active">Sobre</a><a href="fisioterapia" class="nav-item nav-link active">Fisioterapia</a>
+                    <a href="sobre" class="nav-item nav-link">Sobre</a><a href="fisioterapia" class="nav-item nav-link">Fisioterapia</a>
                     <a href="massoterapia" class="nav-item nav-link">Serviços</a>
                     <!--<div class="nav-item dropdown">
                         <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown">Artigos e notícias</a>
@@ -142,7 +142,7 @@
                         </div>
                     </div>
                     <a href="preco" class="nav-item nav-link">Preços</a>
-                    <a href="contato" class="nav-item nav-link active">Contato</a>
+                    <a href="contato" class="nav-item nav-link">Contato</a>
                 </div>
 <a href="https://api.whatsapp.com/send?phone=5511974237159&text=Ol%C3%A1%20Will!%20Gostaria%20de%20agendar%20uma%20sess%C3%A3o." target="_blank" class="btn btn-primary d-none d-lg-block">Agendar</a>            </div>
         </nav>
