--- a/index.html
+++ b/index.html
@@ -117,8 +117,8 @@
             </button>
             <div class="collapse navbar-collapse justify-content-between px-lg-3" id="navbarCollapse">
                 <div class="navbar-nav m-auto py-0">
-                    <a href="/" class="nav-item nav-link active">Home</a>
-                    <a href="sobre" class="nav-item nav-link active">Sobre</a><a href="fisioterapia" class="nav-item nav-link active">Fisioterapia</a>
+                    <a href="/" class="nav-item nav-link">Home</a>
+                    <a href="sobre" class="nav-item nav-link">Sobre</a><a href="fisioterapia" class="nav-item nav-link">Fisioterapia</a>
                     
                     <!--<div class="nav-item dropdown">
                         <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown">Artigos e notícias</a>
