--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
                     <div class="carousel-caption d-flex flex-column align-items-center justify-content-center">
                         <div class="p-3" style="max-width: 900px;">
                             <h6 class="text-white text-uppercase mb-3 animate__animated animate__fadeInDown" style="letter-spacing: 3px;">Fisioterapia e Massoterapia</h6>
-                            <h3 class="display-3 text-white mb-3" style="font-size: 4.3rem;">Atendimento domiciliar ou em clínica</h3>
+                            <h3 class="display-3 text-white mb-3">Atendimento domiciliar ou em clínica</h3>
                             <p class="mx-md-5" style="padding: 2rem !important;">Oferecemos atendimento personalizado, seja em clínica ou no conforto do seu lar. <br>Já pensou em fazer fisioterapia ou receber uma massagem sem sair de casa?<br> Aproveite essa experiência única onde você se sentir mais à vontade.</p>
                             <a class="btn btn-outline-light py-3 px-4 m-3 animate__animated animate__fadeInUp" href="https://api.whatsapp.com/send?phone=5511974237159&text=Ol%C3%A1%20Will!%20Gostaria%20de%20agendar%20uma%20sess%C3%A3o." target="_blank">Agendar</a>
                             <a class="btn btn-outline-light py-3 px-4 m-3 animate__animated animate__fadeInUp" href="massoterapia" >Saiba mais</a>
